--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce-front",
-  "homepage": "https://Inna-Mykytiuk.github.io/e-commerce-front/",
+  "homepage": ".",
   "private": true,
   "version": "0.0.0",
   "type": "module",
