--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,15 @@
+// {
+//   "compilerOptions": {
+//     "baseUrl": ".",
+//     "paths": {
+//       "@/*": ["./src/*"]
+//     }
+//   }
+// }
+
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  }
+    "baseUrl": "src"
+  },
+  "include": ["src"]
 }
