--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce-front",
-  "homepage": ".",
+  "homepage": "https://inna-mykytiuk.github.io/e-commerce-front/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
