--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "e-commerce-front",
-  "homepage": "https://inna-mykytiuk.github.io/e-commerce-front/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -42,6 +41,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
