--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "postcss": "^8.4.43",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
