add taiwind settings

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,9 @@
-{}
+{
+  "plugins": [
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ],
+  "importOrder": ["^react(.*)$", "THIRD_PARTY_MODULES", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
+}
